Created http client using swagger generate client
