# product-api/handlers/get.go
@@ -3,7 +3,7 @@ package handlers
 import (
 	"net/http"
 
-	"github.com/HirokiHanada11/go-microservices/data"
+	"github.com/HirokiHanada11/go-microservices/product-api/data"
 )
 
 // swagger:route GET /products products listProducts
@@ -15,6 +15,8 @@ import (
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
 
+	rw.Header().Add("Content-Type", "application/json")
+
 	prods := data.GetProducts()
 
 	err := data.ToJSON(prods, rw)
@@ -24,7 +26,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
