# product-api/handlers/products.go
@@ -6,7 +6,7 @@ import (
 	"net/http"
 	"strconv"
 
-	"github.com/HirokiHanada11/go-microservices/data"
+	"github.com/HirokiHanada11/go-microservices/product-api/data"
 	"github.com/gorilla/mux"
 )
 
@@ -24,7 +24,7 @@ func NewProducts(l *log.Logger, v *data.Validation) *Products {
 }
 
 // ErrInvalidProductPath is an error message when the product path is not valid
-var ErrInvalidProductPath = fmt.Errorf("Invalid Path, path should be /products/[id]")
+var ErrInvalidProductPath = fmt.Errorf("invalid Path, path should be /products/[id]")
 
 // GenericError is a generic error message returned by a server
 type GenericError struct {
