# product-api/swagger.yaml
@@ -90,6 +90,41 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - products
+  /products/{id}:
+    delete:
+      description: Returns no content
+      operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
+      tags:
+      - products
+    get:
+      description: Return a list of products from the database
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
     put:
       description: Update a products details
       operationId: updateProduct
@@ -116,25 +151,6 @@ paths:
           $ref: '#/responses/errorResponse'
         "422":
           $ref: '#/responses/errorValidation'
-      tags:
-      - products
-  /products/{id}:
-    delete:
-      description: Returns no content
-      operationId: deleteProduct
-      responses:
-        "201":
-          $ref: '#/responses/noContent'
-      tags:
-      - products
-    get:
-      description: Return a list of products from the database
-      operationId: listSingle
-      responses:
-        "200":
-          $ref: '#/responses/productResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
       tags:
       - products
 produces:
